--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,55 +1,24 @@
-# three targets:
-# 	default: compile the program
-#	check  : compile the program, if needed, and then for each file, F.in, in directory testing, use F.in as input and compare
-#			 the output to the contents of the file names F.out.
-#   clean  : remove all files produced by the make command.
-
-# target ... : prerequisities ...
-# 	recipe
-# 	...
+CC = g++
+CFLAGS = -g -Wall -c
+LDFLAGS = -g -Wall
+BOOSTFLAGS = -lboost_serialization
 
 vpath %.cpp ../
 vpath %.h ../
 vpath %.o ../
 
-objects = main.o Blob.o Commit.o RemoteRepo.o \
-			Repository.o StagingArea.o Tree.o Utils.o
 
-# objects := $(wildcard *.o)
-# objects := $(patsubst %.cpp, %.o, $(wildcard *.cpp))
+all: PartA
 
+PartA: main.o Blob.o Commit.o RemoteRepo.o Repository.o StagingArea.o Tree.o Utils.o
+	$(CC) $(LDFLAGS) -o gitlet main.o Blob.o Commit.o RemoteRepo.o Repository.o StagingArea.o Tree.o Utils.o $(BOOSTFLAGS)
 
-gitlet : $(objects)
-	@pwd
-	g++ -o gitlet -g $(objects) -lboost_serialization -Wall
-	make cleanObjects
+gitlet: main.o Blob.o Commit.o RemoteRepo.o Repository.o StagingArea.o Tree.o Utils.o
+	$(CC) $(LDFLAGS) -o gitlet main.o Blob.o Commit.o RemoteRepo.o Repository.o StagingArea.o Tree.o Utils.o $(BOOSTFLAGS)
 
-main.o : Utils.h Repository.h
-#	g++ -c main.cpp 
+%.o: %.cpp
+	$(CC) $(CFLAGS) $< $(BOOSTFLAGS)
 
-Blob.o : Blob.h Repository.h
-#	g++ -c Blob.cpp 
+clean:
+	rm -rf *.o gitlet
 
-Commit.o : Commit.h Repository.h
-#	g++ -c Commit.cpp 
-
-RemoteRepo.o : RemoteRepo.h Repository.h
-#	g++ -c RemoteRepo.cpp
-
-Repository.o : Repository.h
-#	g++ -c Repository.cpp
-
-StagingArea.o : StagingArea.h Repository.h
-#	g++ -c StagingArea.cpp 
-
-Tree.o : Tree.h Repository.h
-#	g++ -c Tree.cpp
-
-Utils.o : Utils.h
-#	g++ -c Utils.cpp
-
-.PHONY : clean cleanObjects
-clean : 
-	-rm -rf gitlet *.o
-cleanObjects :
-	-rm -rf *.o
